# nas

./: .gitignore  README.md
OpenGl/kodexempel/: calculate_mesh_scale.cpp
OpenGl/ogldev-source/tutorial25/: CMakeLists.txt
